discussion/kv_engine/184396/184396_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add CDC Magma API to MagmaMemoryTrackingProxy

Change-Id: Idf2bf082c3ecb78b93e393c1d6b796b598e3b80b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:59:43.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 16:00:00.000000000
Message: 
Patch Set 7: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332662/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 16:16:55.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/818/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28: error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.MinValueSize =
                           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/818/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/818/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/997/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(560): error C2039: "MinValueSize": is not a member of "magma::Magma::Config" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/997/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/789/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/789/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/789/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1106/ : FAILURE

Compile error at [2023-01-16T16:05:17.270Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1106/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/838/ : FAILURE

Compile error at [2023-01-16T16:09:17.601Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/838/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/824/ : FAILURE

Compile error at [2023-01-16T16:02:21.774Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/824/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/828/ : FAILURE

Compile error at [2023-01-16T16:04:26.164Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/828/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/830/ : FAILURE

Compile error at [2023-01-16T16:05:35.311Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/830/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/809/ : FAILURE

Compile error at [2023-01-16T16:06:41.507Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/809/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22198/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/839/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
